// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing myRequests should render Requests 1`] = `
<div
  className="myRequests"
>
  <h2
    className="myRequests-h2"
  >
     My Requests 
  </h2>
  <ForwardRef(Paper)
    className="myRequests-Paper"
    square={true}
  >
    <ForwardRef(Tabs)
      aria-label="disabled tabs example"
      centered={true}
      elevation={20}
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      value={0}
      variant="fullWidth"
    >
      <ForwardRef(Tab)
        label="Pending"
      />
      <ForwardRef(Tab)
        label="Completed"
      />
    </ForwardRef(Tabs)>
    <TabPanel
      index={0}
      value={0}
    >
      <Connect(Pending) />
    </TabPanel>
    <TabPanel
      index={1}
      value={0}
    >
      <Connect(completed) />
    </TabPanel>
  </ForwardRef(Paper)>
</div>
`;

exports[`testing myRequests should test onChange 1`] = `
<div
  className="myRequests"
>
  <h2
    className="myRequests-h2"
  >
     My Requests 
  </h2>
  <ForwardRef(Paper)
    className="myRequests-Paper"
    square={true}
  >
    <ForwardRef(Tabs)
      aria-label="disabled tabs example"
      centered={true}
      elevation={20}
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      variant="fullWidth"
    >
      <ForwardRef(Tab)
        label="Pending"
      />
      <ForwardRef(Tab)
        label="Completed"
      />
    </ForwardRef(Tabs)>
    <TabPanel
      index={0}
    >
      <Connect(Pending) />
    </TabPanel>
    <TabPanel
      index={1}
    >
      <Connect(completed) />
    </TabPanel>
  </ForwardRef(Paper)>
</div>
`;
